# FastAPI-MADR

./: .dockerignore  .gitignore  README.md  database.db  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 1ea9390f1a88_table_books.py  25c363a279d2_.py  27406643da39_nada_de_mais.py  49d3448a109f_create_users_table.py  50711cb204a9_relaçoens_entre_tabelas9.py  7ca533b700ed_relaçoens_entre_tabelas7.py  94bbee20954b_relaçoens_entre_tabelas6.py  984cebbe1de0_aplicando_tabela.py  bb3101512369_nova_tabela_novelists.py  e6180e357264_relaçoens_entre_tabelas8.py  e9c228acc2d0_changing_the_table_name.py  eeedcfc290e4_nova_tabela_novelists.py
tcc_my_project/: app.py  database.py  models.py  schemas.py  security.py  settings.py
tcc_my_project/routers/: accounts.py  books.py  novelists.py
tests/: conftest.py  test_accounts.py  test_books.py  test_novelists.py  test_security.py
